# swagger.json
@@ -153,7 +153,7 @@
           "description": "User's change profile object",
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "$ref": "#/components/schemas/UpdateUserInfoRequest"
               }
@@ -182,55 +182,6 @@
           },
           "409": {
             "description": "Email already in use by another user",
-            "content": {}
-          }
-        }
-      }
-    },
-    "/api/user/change-avatar": {
-      "post": {
-        "tags": ["User"],
-        "summary": "Upload user avatar",
-        "requestBody": {
-          "content": {
-            "multipart/form-data": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "avatarURL": {
-                    "type": "string",
-                    "format": "binary",
-                    "description": "User avatar file"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "security": [{ "Bearer": [] }],
-        "responses": {
-          "200": {
-            "description": "Successful avatar upload",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "avatarURL": {
-                      "type": "string",
-                      "description": "Uploaded file URL"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid request body",
-            "content": {}
-          },
-          "401": {
-            "description": "Unauthorized (invalid access token)",
             "content": {}
           },
           "500": {
@@ -431,6 +382,11 @@
             "type": "string",
             "description": "User's Skype",
             "example": "Add a skype number (string)"
+          },
+          "avatarURL": {
+            "type": "string",
+            "format": "binary",
+            "description": "User's avatar file"
           }
         }
       },
@@ -461,6 +417,10 @@
             "type": "string",
             "description": "Updated user's Skype",
             "example": "Add a skype number (string)"
+          },
+          "avatarURL": {
+            "type": "string",
+            "description": "URL of the uploaded avatar"
           }
         }
       },
